이미지 수정

--- a/scss/feeling.scss
+++ b/scss/feeling.scss
@@ -55,7 +55,7 @@ $secondary: #00bbff;
         color: #222222;
         padding: 60px 20px;
         position: relative;
-        background-image: url(/images/bg6.jpg);
+        background-image: url(./images/bg6.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         .end {
