--- a/css/feeling.css
+++ b/css/feeling.css
@@ -53,7 +53,7 @@
   color: #222222;
   padding: 60px 20px;
   position: relative;
-  background-image: url(/images/bg6.jpg);
+  background-image: url(./images/bg6.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
